--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-wiringpi (2.26~iwj) rpi-unstable; urgency=low
+wiringpi (2.70-1.1) stable; urgency=low
 
-  * Initial version with real Debian source package build.
+  * First Debian Release
 
- -- Ian Jackson <ijackson@chiark.greenend.org.uk>  Sat, 12 Sep 2015 18:31:35 +0100
-
+ -- "wiringpi" <wiringpi@indimail.org>  Mon, 19 Jun 2023 03:51:56 +0000
