--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -2,3 +2,4 @@
 Release @version@-@release@ Start 24/04/2023 End XX/XX/XXXX
 - 19/06/2023
 01. First Debian Release
+02. use autoconf to generate Makefiles
