added repository for rpm/debian builds on obs

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -4,3 +4,4 @@ Release @version@-@release@ Start 24/04/2023 End XX/XX/XXXX
 01. First Debian Release
 02. use autoconf to generate Makefiles
 03. Removed compiler warnings
+04. added repository for debian/rpm builds on open build service
